<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailOrderingActivity">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/item_background_recyclerview">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ordering_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:srcCompat="@drawable/pizza"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/ordering_foodname_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:gravity="center_horizontal"
                    android:padding="5dp"
                    android:text="@string/food_name"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="3dp">

                    <ImageView
                        android:id="@+id/ordering_remove_imageView"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/remove_circle"
                        tools:ignore="ContentDescription"
                        android:clickable="true"
                        android:onClick="decrement"/>

                    <TextView
                        android:id="@+id/ordering_number_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:text="1"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/ordering_add_imageView"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/add_circle"
                        android:contentDescription="@string/order_image"
                        android:clickable="true"
                        android:onClick="increment"/>

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ordering_description_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="9dp"
                android:fontFamily="serif"
                android:gravity="center"
                android:text="@string/this_is_very_delightful_pizza_and_u_will_love_the_taste_of_it"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ordering_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/editview_background"
                android:gravity="center"
                android:hint="@string/your_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="9dp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/ordering_phone_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/editview_background"
                android:gravity="center"
                android:hint="91_xxxxxxxxxx"
                android:inputType="phone"
                android:minHeight="48dp"
                android:padding="9dp"
                android:autofillHints="" />

            <TextView
                android:id="@+id/ordering_price_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:gravity="center"
                android:text="@string/price_order"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ordering_dollar_sign_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/ordering_price_value_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <Button
                android:id="@+id/ordering_ordernow_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/ordering_edit_text_bg"
                android:fontFamily="serif"
                android:padding="3dp"
                android:text="@string/order_now"
                android:textColor="@color/white"
                android:textSize="34sp"
                android:textStyle="bold" />

        </LinearLayout>
</LinearLayout>